--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <p>
       This is a paragraph of text. If you need a new line, use this: <br>
-      This is on a new line now
+      This is on a new line now. <a href="about.html">Go here!</a>
     </p>
     
     <p>
