--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <html>
   <head>
     <title>GitHub Example Site</title>
-    <style>
-      p {
-        background-color: blue;
-        color: white;
-      }
-      
-      .largerFont{
-        font-size: 2em;
-      } 
-    </style>
+    <link rel="stylesheet" href="test.css">
   </head>
   
   <body>
